[project]
name = "spectrograms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pathlib>=1.0.1",
    "pytubefix>=10.3.6",
    "scipy>=1.16.3",
    "soundfile>=0.13.1",
]
